# beiwe-backend

./: .coveragerc  .git-blame-ignore-revs  .gitignore  Dockerfile  Procfile  README.md  Requirements.txt  SECURITY.md  app.py  docker-compose.yml  gunicorn_conf.py  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_data_processing.txt  requirements_testing.txt  run_task.sh  urls.py  wsgi.py
.ebextensions/: 01.config
.elasticbeanstalk/: config.yml
.github/ISSUE_TEMPLATE/: mano-bug-report.md
.github/workflows/: ci.yml  deploy.yml
api/: copy_study_api.py  data_access_api.py  mobile_api.py  participant_administration.py  study_api.py
api/tableau_api/: base.py  constants.py  spec.yaml  views.py
authentication/: admin_authentication.py  data_access_authentication.py  participant_authentication.py  tableau_authentication.py
cluster_management/: launch_script.py  manage_shell.py
cluster_management/deployment_helpers/: configuration_utils.py  constants.py  general_utils.py
cluster_management/pushed_files/: bash_profile.sh  cron_manager.txt  cron_root.txt  cron_worker.txt  eb_profile.sh  htoprc  install_celery_worker.sh
compression_tests/: compression_binary2.py  compression_test.py
config/: __init__.py  constants.py  django_settings.py  jinja2.py  settings.py
constants/: __init__.py  action_log_messages.py  common_constants.py  copy_study_constants.py  data_processing_constants.py  data_stream_constants.py  forest_constants.py  message_strings.py  raw_data_constants.py  s3_constants.py  schedule_constants.py  study_constants.py  testing_constants.py  url_constants.py  user_constants.py
data_access_api_reference/: download_data.py  other_api_reference_script.py
database/: common_models.py  dashboard_models.py  data_access_models.py  forest_models.py  models.py  profiling_models.py  schedule_models.py  security_models.py  study_models.py  survey_models.py  system_models.py  tableau_api_models.py  user_models.py  user_models_common.py  user_models_participant.py  user_models_researcher.py  validators.py
database/migrations/: 0014_devicesettings_use_gps_fuzzing.py  0031_auto_20200310_1741.py  0037_summarystatisticdaily.py  0045_auto_20210121_0301.py  0048_auto_20210205_0834.py  0049_auto_20210219_0416.py  0049_auto_20210226_0920.py  0050_auto_20210226_1101.py  0050_auto_20210325_1737.py  0051_auto_20210325_1737.py  0051_devicesettings_ambient_audio.py  0051_devicesettings_background_audio.py  0051_enable_support_for_customized_forest_metadata_20210309_2145.py  0052_auto_20210330_2130.py  0054_foresttask_forest_output_exists.py  0055_auto_20210520_1931.py  0056_auto_20210524_2128.py  0057_auto_20210525_1920.py  0058_auto_20210525_1929.py  0060_auto_20210923_0023.py  0060_auto_20210923_0516.py  0061_historical_data_qty_stats.py  0128_devicesettings_omniring_and_more.py  0128_manual_archived_event_cleanup.py  0129_remove_scheduledevent_checkin_time_and_more.py  0130_appversionhistory_os_is_ios.py  0131_uuid_migration.py  0132_participant_last_known_surveys_available_and_more.py  0132_participant_raw_notification_report.py  0133_archivedevent_was_resend.py  0133_devicesettings_omniring_and_more.py  0133_merge_20241126_1949.py  0134_devicesettings_resend_period_minutes.py  0135_remove_globalsettings_earliest_possible_time_of_push_notification_resend_and_more.py  0136_scheduledevent_no_resend.py  0137_s3file.py  0139_delete_lineencryptionerror.py  (+15 more)
docker_management/: dev.docker-compose.yml
endpoints/: data_api_endpoints.py  data_page_endpoints.py  forest_endpoints.py  login_endpoints.py  manage_researcher_endpoints.py  manage_study_endpoints.py  misc_download_endpoints.py  mobile_endpoints.py  participant_endpoints.py  raw_data_api_endpoints.py  study_endpoints.py  survey_endpoints.py  system_admin_endpoints.py
libs/: aes.py  celery_control.py  copy_study.py  django_typing.py  efficient_paginator.py  encryption.py  firebase_config.py  internal_types.py  intervention_utils.py  json_logic.py  participant_purge.py  push_notification_helpers.py  rsa.py  s3.py  schedules.py  sentry.py  serializers.py  shell_support.py  streaming_io.py  streaming_zip.py  timezone_dropdown.py
middleware/: context_processors.py  downtime_middleware.py  minified_css_bug_middleware.py  request_to_curl.py
pages/: admin_pages.py  data_access_web_form.py  forest_pages.py  participant_pages.py  system_admin_pages.py
scripts/: minify_css.py  populate_summary_statistics_bytes.py  purge_participant_data.py  repopulate_push_notifications.py  run_custom_ondeploy_script.py  script_that_archives_the_s3_bucket.py  script_that_compresses_s3_data.py  script_that_deletes_data_from_unknown_studies.py  script_that_deletes_known_junk_uploads.py  script_that_deletes_problem_uploads.py  script_that_fixes_duplicate_columns.py  script_that_re_adds_study_data_for_processing.py  script_that_recovers_some_ios_data.py  script_that_removes_data_from_invalid_time_sources.py  script_that_removes_unusable_problem_uploads.py  taskrunner.py  update_forest_version.py  upload_logs.py
services/: celery_data_processing.py  celery_forest.py  celery_heartbeat_push_notifications.py  celery_push_notifications.py  cron.py  heartbeat_push_notifications.py  resend_push_notifications.py  scripts_runner.py  survey_push_notifications.py
tests/: common.py  helpers.py  test_celery.py  test_data_api_endpoints.py  test_data_page_endpoints.py  test_file_processing.py  test_forest_endpoints.py  test_forest_runner.py  test_heartbeat_query.py  test_login_endpoints.py  test_manage_researcher_endpoints.py  test_manage_study_endpoints.py  test_mobile_endpoints.py  test_participant_endpoints.py  test_push_notifications.py  test_push_resends_and_heartbeat.py  test_raw_data_api.py  test_raw_data_api_endpoints.py  test_schedules.py  test_security.py  test_study_endpoints.py  test_survey_endpoints.py  test_system_admin_endpoints.py  test_unittests.py  test_unittests2.py  ~test_data_access_api.py
user_scripts/: delete_bucket.py  generate_relation_hax.py  generate_typing_hax.py  iphone_calls.py  iphone_messages.py
(+114 files in other folders)
