[project]

name = "Beiwe-Backend"
version = "0"  # This is a rolling release, if the need arises we will add a version number.

# This pyproject.toml file is not complete. All tooling and information that can be moved into this
# file should be incorporated, especially if it removes a configuration file from the repository.

description = "The Beiwe Backend repository contains the server and host deployment and management tools for The Beiwe Platform.  This repository is a rolling release, users of the platform seeking active support are encouraged watch the main branch of the repository, to post in repo issues, and/or to get in contact via email with the maintainer so that development is aware of their use-case."

maintainers = [
  { name = "Eli Jones", email = "biblicabeiwe@gmail.com" }  
]

authors = [  # Contributors
  # Eli Jones is the primary architect and maintainer of The Beiwe Platform.  He is a major contributor to the backend and the apps, and occasionally dabbles in the Forest repository.  He has been involved since the platform's inception.
  { name = "Eli Jones" },
  
  # Reyva Babtista has contributed a major feature to the platform: container support! Let's hope we can eventually get everyone there, retire Elastic Beanstalk, and support other IaaS providers than AWS.
  { name = "Reyva Babtista" },
  
  # Professor Onnela is the PI of Onnela Lab at the Harvard T.H. Chan School of Public Health, which develops The Beiwe Platform. This development is supported by funding from the U.S. National Institutes of Health.
  { name = "JP Onnela" },
  
  # Josh Zagorsky is a founder at Zagaran Inc., which developed The Beiwe Platform under the direction of JP Onnela.  He is a major historical architect of and contributer to both apps and the backend.
  { name = "Josh Zagorsky" },
  
  # Historical contributers
  { name = "Aaron Klein" },
  { name = "Ali Abdullah" },
  { name = "Alvin Siu" },
  { name = "Caleb Dixon" },
  { name = "Chris McCarthy" },
  { name = "Daniel Norton" },
  { name = "Dor Samet" },
  { name = "Erinn Looney-Triggs" },
  { name = "Jake Klingensmith" },
  { name = "Leila Minowada" },
  { name = "Noah Houghton" },
  { name = "Sean Esterkin" },
  { name = "Zonglin Leon He" },
]

readme = "README.md"
license = { file = "LICENSE.md" }

classifiers = [
  "Programming Language :: Python :: 3.12",
  "Requires-Python: >=3.12",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Natural Language :: English",
  
  # "Project-URL: Homepage - https://beiwe.org"  # at time of writing there were problems with the site hosting?
  "Project-URL: Homepage - https://github.com/onnela-lab/beiwe-backend",
  "Project-URL: Documentation - https://github.com/onnela-lab/beiwe-backend/wiki",
  "Project-URL: Repository - https://github.com/onnela-lab/beiwe-backend.git",
  "Project-URL: Issues - https://github.com/onnela-lab/beiwe-backend/issues",
]

keywords = [
  "Beiwe Platform",
  "Beiwe",
  "Clinical Research",
  "Data Science",
  "Digital Phenotyping",
  "Phenotyping",
  "Public Health",
  "Research Platform",
  "Research",
  "Studies",
  "Study",
]

#
## Dependencies are not currently handled in this file
#
# dependencies = []

#
## We are still introducing formatters to this project, but opinionated formatters like Black
## will not be enforced or accepted as additions.  Currently isort and yaml are actively used
## but not enforced.  MyPy is used for type checking but not enforced or officially configured.
## There is no Javascript code formatting tool in use (yet).
#

[tool.isort]
combine_as_imports = true
float_to_top = true
honor_noqa = true
line_length = 100
lines_after_imports = 2
multi_line_output = 10  # "HANGING_INDENT_WITH_PARENTHESES"
py_version = 312
remove_redundant_aliases = true
star_first = true
use_parentheses = true

known_third_party = []  # Force these libraries to a special spot in import order (second to bottom)

known_local_folder = [
  "forest",
]

known_first_party = [  # Force these libraries to a special spot in import order (bottom)
    "authentication",
    "cluster_management",
    "config",
    "constants",
    "database",
    "endpoints",
    "libs",
    "middleware",
    "services",
]


[tool.ruff]
line-length = 105
indent-width = 4

[tool.ruff.format]
indent-style = "space"  # use spaces for indentation
line-ending = "lf"  # use \n for line endings

[tool.ruff.lint.pycodestyle]
max-line-length = 120  # maximum line length

[tool.ruff.lint]
future-annotations = true


[tool.flake8]

extend-ignore = [
    "E127",  # continuation line over-indented for visual indent
    "E128",  # continuation line under-indented for visual indent
    "E225",  # missing whitespace around operator
    # "E305",   # should have 2 blank lines after class or function definition
    "E301",  # expected 1 blank line, found 0
    # "E302",  # expected 2 blank lines, found 1
    "E303",   # too many blank lines
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    # "E265",  # block comment should start with '# '
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long
    "R503",  # missing explicit None return
    "W293",  # blank line contains whitespace
    # "C408",  # unnecessary list comprehension
    # "SIM102",  # use 'if any(...)' instead of 'if True in (...)'
    # "CFQ002",  # missing whitespace after ',' (?)
    # "CFQ004",
]
exclude = [
    ".git",
    "__pycache__",
    "docs",
    "frontend",
    "paper",
    "private",
]